# swpp202401-compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile.sh  format-all.sh
src/: CMakeLists.txt  args.h  fs.cpp  fs.h  lib.cpp  lib.h  main.cpp  static_error.h
src/lib/: CMakeLists.txt  backend.cpp  backend.h  opt.h  parser.cpp  parser.h  print_ir.h
src/lib/backend/: CMakeLists.txt  alloca_eliminate.cpp  analysis.cpp  analysis.h  arch.h  assembly.h  check_oracle.cpp  const_map.cpp  const_map.h  const_split.cpp  const_split.h  emitter.cpp  emitter.h  freeze_eliminate.cpp  freeze_eliminate.h  gep_eliminate.cpp  gv_eliminate.cpp  phi_preprocess.cpp  poison_eliminate.cpp  poison_eliminate.h  register_allocate.cpp  register_allocate.h  sext_eliminate.cpp  sext_eliminate.h  symbol.cpp  symbol.h  trunc_adjust.cpp  trunc_adjust.h  undef_eliminate.cpp  undef_eliminate.h
src/lib/backend/assembly/: CMakeLists.txt  inst.cpp  inst.h  register_t.cpp  register_t.h  width_t.cpp  width_t.h
src/lib/backend/symbol/: CMakeLists.txt  base.cpp  base.h
